# my-PydanticAI

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml
adapters/: README.md
adapters/control-planes/: README.md
adapters/external-services/: README.md
bridges/: hermes-task-mcp-serve.js  pi-mcp-serve.js
contracts/: README.md  stokowski-merge-blueprint.md
contracts/bridge-api/: README.md  bridge-envelope.md  bridge-metadata.md  bridge-return-value.md  cli-worker-shape.md  mcp-worker-shape.md  payload-examples.md
contracts/frontend-api/: README.md  cli-contract.md  host-integration-notes.md  telegram-contract.md
contracts/worker-api/: README.md  orchestration-report.md  review-result.md  route-decision.md  worker-result.md  workflow-result.md
contracts/worker-api/schemas/: orchestration-report-outline.md  worker-result-outline.md
docs/: architecture.md  claude-code-mcp-notes.md  hermes-mcp-adapter-plan.md  hermes-mcp-validation.md  mcp-integration-plan.md  responsibility-narrowing.md  worker-followup-notes.md
src/pydanticai_orchestrator/: __init__.py  agent.py  cli.py  mcp_server.py  schemas.py  service.py  settings.py  shell.py  state_store.py  telegram_bot.py
src/pydanticai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pydanticai_orchestrator/adapters/: __init__.py  base.py  claude_code.py  codex_mcp.py  hermes.py  mcp_common.py  mcp_stdio.py  pi.py  stokowski.py
tests/: test_adapters.py  test_run_store.py  test_service.py  test_settings.py
